--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "joi-browser": "^13.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
